--- a/substitutions/manifest.json
+++ b/substitutions/manifest.json
@@ -1,14 +1,14 @@
 {
   "manifest_version": 2,
-  "name": "XKCD substitutions",
-  "description": "Making the web a stranger better place.",
-  "version": "1.4.1",
+  "name": "Prince substitutions",
+  "description": "Making the web more Prince.",
+  "version": "1.0.0",
   "options_page": "html/config.html",
   "browser_action": {
     "default_icon": {
       "19": "images/enabled.png"
     },
-    "default_title": "click to disable xkcd substitutions"
+    "default_title": "click to disable Prince substitutions"
   },
   "background": {
     "scripts": [
